--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <i class="fas fa-video"></i>
             <i class="fas fa-qrcode"></i>
             <i class="far fa-bell"></i>
-            <div><img id="acLogo" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT74hwic3ZgbITrhPvuhWZ35QtL9DKTp-l9ow&usqp=CAU" alt=""></div>
+            <div><img id="acLogo" src="" alt=""></div>
         </div>
 
     </div>
